# substack-dl

./: Makefile  README.md  config.yaml  main.py  pyproject.toml
substack_dl/: main.py
tests/: test_output_formats.py
