[tool.poetry]
name = "substack-dl"
version = "0.1.0"
description = "A tool to download Substack posts and archives."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "substack_dl"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
feedparser = "^6.0.10"
readability-lxml = "^0.8.1"
markdownify = "^0.11.6"
python-slugify = "^8.0.1"
PyYAML = "^6.0.1"
beautifulsoup4 = "^4.12.2"
# For CLI - will choose one later, argparse is built-in
# typer = {extras = ["all"], version = "^0.9.0"}
# click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
substack-dl = "substack_dl.main:cli" # Assuming main entry point will be a function `cli` in `main.py`
